--- a/package.json
+++ b/package.json
@@ -5,24 +5,45 @@
   "engines": {
     "node": "14.x"
   },
-  "main": "index.js",
+  "main": "dist/server/index.js",
   "scripts": {
-    "build": "tsc",
-    "postinstall": "tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js\""
+    "build": "webpack && tsc -p ./server",
+    "postinstall": "webpack && tsc -p ./server",
+    "start": "node dist/server/index.js",
+    "dev": "env NODE_ENV=development concurrently \"webpack -w\" \"tsc -p ./server -w\" \"nodemon dist/server/index.js\"",
+    "test": "env NODE_ENV=test concurrently \"webpack -w\" \"tsc -p ./server -w\" \"nodemon dist/server/index.js\""
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Epiphane/tex-rpg.git"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.13",
+    "@types/ws": "^8.2.0",
     "concurrently": "^6.3.0",
     "http": "^0.0.1-security",
     "nodemon": "^2.0.13",
-    "typescript": "^4.4.4"
+    "sequelize-cli": "^6.2.0",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "@types/node": "^16.11.1"
+    "@textcomplete/core": "^0.1.10",
+    "@textcomplete/textarea": "^0.1.10",
+    "@types/node": "^16.11.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "nocache": "^3.0.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.7.0",
+    "sequelize-lazy-migrations": "^1.0.4",
+    "sequelize-typescript": "^2.1.1",
+    "sqlite3": "^5.0.2",
+    "ts-loader": "^9.2.6",
+    "ws": "^8.2.3"
   }
 }
