--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "tex-rpg",
   "version": "0.0.1",
   "description": "",
-  "engines": {
-    "node": "14.x"
-  },
   "main": "dist/server/index.js",
   "scripts": {
     "build": "webpack && tsc -p ./server",
@@ -20,11 +17,12 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/ws": "^8.2.0",
     "concurrently": "^6.3.0",
     "http": "^0.0.1-security",
     "nodemon": "^2.0.13",
-    "sequelize-cli": "^6.2.0",
+    "sequelize-cli": "^5.4.0",
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
@@ -35,14 +33,16 @@
     "@types/node": "^16.11.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "nocache": "^3.0.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.7.0",
+    "sequelize": "^6.8.0",
     "sequelize-lazy-migrations": "^1.0.4",
     "sequelize-typescript": "^2.1.1",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "^4.2.0",
     "ts-loader": "^9.2.6",
     "ws": "^8.2.3"
   }
